crates/tsuno-driver/tests/fixtures/snapshots/pass/standalone_contract_unsafe_fn.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS caller
  all assertions discharged
PASS main
  all assertions discharged

stderr:
