crates/tsuno-driver/tests/fixtures/snapshots/pass/standalone_proof_body_directives.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS count_to
  all assertions discharged
PASS main
  all assertions discharged

stderr:
