crates/tsuno-driver/tests/fixtures/snapshots/pass/supports_consecutive_directives.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS helper
  all assertions discharged
PASS tail_value
  all assertions discharged
PASS block_end
  all assertions discharged
PASS main
  all assertions discharged

stderr:
