crates/tsuno-driver/tests/fixtures/snapshots/pass/supports_doc_style_contract_comments.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS mixed_contract_comments
  all assertions discharged
PASS inline_req_ens_contract
  all assertions discharged
PASS main
  all assertions discharged

stderr:
