crates/tsuno-driver/tests/fixtures/snapshots/pass/supports_enum_variant_selector.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS supports_struct_variant_selector
  all assertions discharged
PASS supports_tuple_variant_selector
  all assertions discharged
PASS main
  all assertions discharged

stderr:
