crates/tsuno-driver/tests/fixtures/snapshots/pass/supports_interpolated_runtime_bindings.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS id
  all assertions discharged
PASS count_to
  all assertions discharged
PASS main
  all assertions discharged

stderr:
