crates/tsuno-driver/tests/fixtures/snapshots/pass/supports_line_comment_ghost_items.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS supports_line_comment_ghost_items
  all assertions discharged
PASS supports_block_loop_invariant
  all assertions discharged
PASS main
  all assertions discharged

stderr:
